# SpotiCLI

./: README.md  pyproject.toml  requirements.txt
src/: runner.py
src/database/: db.py
src/next_track/: next_track.py  test_spotify.py
src/playlists/: playlists.py  test_playlists.py
