[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "next_track"
version = "0.0.1"
authors = [
  { name="Korwin Stevens", email="korwin.stevens@gmail.com" },
]
description = "A terminal client for Spotify"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

